move lab-tutorials into its own dir

--- a/lab-tutorial/mos.tex
+++ b/lab-tutorial/mos.tex
@@ -38,7 +38,7 @@
     \begin{center}
         \textbf{\huge The MOS Project}\\
         \vspace{0.5cm}
-        \textbf{\large Lab Tutorial and Documentation}
+        \textbf{\large Lab Tutorial}
 
         \vspace{5cm}
         Moody Liu\\
@@ -48,11 +48,7 @@
 
 \tableofcontents
 
-\part{Lab Tutorial}
-
 \include{chapters/lab.0.introduction.tex}
 \include{chapters/lab.1.devenv.tex}
-
-\part{Documentation}
 
 \end{document}
