move the logos back :(

--- a/lab-tutorial/mos.tex
+++ b/lab-tutorial/mos.tex
@@ -30,7 +30,7 @@
 \begin{titlepage}
     \vspace*{5cm}
     \begin{center}
-        \includegraphics[width=0.5\textwidth]{logo/logo-no-background.png}
+        \includegraphics[width=0.5\textwidth]{logo-no-background.png}
     \end{center}
 
     \vspace{1cm}
