lab-tutorial: lab 1 WIP

--- a/lab-tutorial/lab-tutorial.tex
+++ b/lab-tutorial/lab-tutorial.tex
@@ -20,6 +20,10 @@
 \newenvironment{warning}[0] { \begin{mdframed}[backgroundcolor=red!25]   \textbf{Warning:} \begin{itemize} \itemsep0em } { \end{itemize} \end{mdframed} }
 \newenvironment{tip}[0]     { \begin{mdframed}[backgroundcolor=green!25] \textbf{Tip:}     \begin{itemize} \itemsep0em } { \end{itemize} \end{mdframed} }
 
+% \usepackage{tikz}
+% \usetikzlibrary{graphs}
+% \usetikzlibrary{graphdrawing}
+
 \begin{document}
 
 \begin{titlepage}
