labs: start lab 2

--- a/lab-tutorial/lab-tutorial.tex
+++ b/lab-tutorial/lab-tutorial.tex
@@ -49,5 +49,6 @@
 
 \include{chapters/lab.0.introduction.tex}
 \include{chapters/lab.1.devenv.tex}
+\include{chapters/lab.2.tasks.tex}
 
 \end{document}
