--- a/lab-tutorial/lab-tutorial.tex
+++ b/lab-tutorial/lab-tutorial.tex
@@ -19,6 +19,7 @@
 \newenvironment{note}[0]    { \begin{mdframed}[backgroundcolor=blue!25]  \textbf{Note:}    \begin{itemize} \itemsep0em } { \end{itemize} \end{mdframed} }
 \newenvironment{warning}[0] { \begin{mdframed}[backgroundcolor=red!25]   \textbf{Warning:} \begin{itemize} \itemsep0em } { \end{itemize} \end{mdframed} }
 \newenvironment{tip}[0]     { \begin{mdframed}[backgroundcolor=green!25] \textbf{Tip:}     \begin{itemize} \itemsep0em } { \end{itemize} \end{mdframed} }
+\newenvironment{exercise}[0]{ \begin{mdframed}[backgroundcolor=yellow!25]\textbf{Exercise:}\begin{itemize} \itemsep0em } { \end{itemize} \end{mdframed} }
 
 % \usepackage{tikz}
 % \usetikzlibrary{graphs}
@@ -49,6 +50,6 @@
 
 \include{chapters/lab.0.introduction.tex}
 \include{chapters/lab.1.devenv.tex}
-\include{chapters/lab.2.tasks.tex}
+\include{chapters/lab.2.processes.tex}
 
 \end{document}
