lab2: add memory layout

--- a/lab-tutorial/lab-tutorial.tex
+++ b/lab-tutorial/lab-tutorial.tex
@@ -6,6 +6,7 @@
 \usepackage[margin=3cm]{geometry}
 \usepackage{hyperref}
 \usepackage{url}
+\usepackage{bytefield}
 
 \usepackage{listings}
 \lstset{basicstyle=\ttfamily\small,
