labs: refind lab 2

--- a/lab-tutorial/lab-tutorial.tex
+++ b/lab-tutorial/lab-tutorial.tex
@@ -22,9 +22,13 @@
 \newenvironment{tip}[0]     { \begin{mdframed}[backgroundcolor=green!25] \textbf{Tip:}     \begin{itemize} \itemsep0em } { \end{itemize} \end{mdframed} }
 \newenvironment{exercise}[0]{ \begin{mdframed}[backgroundcolor=yellow!25]\textbf{Exercise:}\begin{itemize} \itemsep0em } { \end{itemize} \end{mdframed} }
 
-% \usepackage{tikz}
-% \usetikzlibrary{graphs}
-% \usetikzlibrary{graphdrawing}
+\usepackage{tikz}
+\usetikzlibrary{arrows,shapes}
+\usetikzlibrary{positioning}
+\usetikzlibrary{automata}
+\usetikzlibrary{petri}
+\usetikzlibrary{calc}
+
 
 \begin{document}
 
