panic: add poweroff_on_panic cmdline

--- a/docs/02.cmdline.md
+++ b/docs/02.cmdline.md
@@ -12,6 +12,7 @@ Options that are not listed below will be ignored by the kernel, and then passed
 - `printk_console=`: The name of the console to use for kernel messages,
   prefix-based search is used if the name is not an exact match.
   - `serial_com1` (default): Use COM1 for kernel messages.
+- `poweroff_on_panic`: Power off the machine when the kernel panics, instead of halting.
 
 ## Unit Tests Options
 
