tests: default to continue booting when tests passed

--- a/docs/02.cmdline.md
+++ b/docs/02.cmdline.md
@@ -20,4 +20,4 @@ These options are only useful if you are running MOS tests, (i.e. `BUILD_TESTING
 
 - `mos_tests`: Run MOS tests.
 - `mos_tests_skip_prefix`: Skip tests with the given prefix.
-- `mos_tests_halt_on_success`: Halt the kernel after all tests have passed, instead of shutting down.
+- `mos_tests_halt_on_success`: Halt the kernel after all tests have passed, instead of continuing to boot.
