cmdline: add option 'quiet'

--- a/docs/02.cmdline.md
+++ b/docs/02.cmdline.md
@@ -13,6 +13,7 @@ Options that are not listed below will be ignored by the kernel, and then passed
   prefix-based search is used if the name is not an exact match.
   - `serial_com1` (default): Use COM1 for kernel messages.
 - `poweroff_on_panic`: Power off the machine when the kernel panics, instead of halting.
+- `quiet`: Disable kernel messages once the kernel has booted, except for kernel panics where this option is ignored.
 
 ## Unit Tests Options
 
