docs: document MOS_MAX_EARLY_MEMREGIONS

--- a/docs/01.cmake.md
+++ b/docs/01.cmake.md
@@ -100,6 +100,10 @@ extensive testing. These options are:
 
   **WARNING**: Changing this value requires an update to the platform-specific code.
 
+- `MOS_MAX_EARLY_MEMREGIONS`: The maximum number of memory regions that can should be pre-allocated when initializing the memory allocator.
+
+  **WARNING**: If this value is too small, not all memory regions will be used, although they are available.
+
 - `MOS_KERNEL_START_VADDR`: The virtual address where the kernel is loaded.
 
   **WARNING**: Changing this value requires an update to the platform-specific code, especially the linker script.
