--- a/docs/02.cmdline.md
+++ b/docs/02.cmdline.md
@@ -8,7 +8,7 @@ Options that are not listed below will be ignored by the kernel, and then passed
 
 ## General Options
 
-- `init=`: Path to the init program, defaults to `/programs/init`.
+- `init=`: Path to the init program, defaults to `/initrd/programs/init`.
 - `printk_console=`: The name of the console to use for kernel messages,
   prefix-based search is used if the name is not an exact match.
   - `serial_com1` (default): Use COM1 for kernel messages.
